--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,5 +47,6 @@ jobs:
       - name: Upload coverage
         uses: codecov/codecov-action@v2
         with:
-          fail_ci_if_error: true
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: false
           verbose: true
