--- a/.pylintrc
+++ b/.pylintrc
@@ -3,3 +3,6 @@ disable = C0103, C0326, C0330, C0413, E1101, R0401, R0903, R0911, R0913, W0102, 
 
 [FORMAT]
 max-line-length=120
+
+[DESIGN]
+max-attributes=12
